fixed spacing in ul nav and cvnav

--- a/css/screen.css
+++ b/css/screen.css
@@ -379,3 +379,11 @@ li a {
 text-decoration: none;
 color: #50A6C2;
 }
+
+div#cv_navbar ul {
+margin-left: -45px;
+}
+
+div#navigation ul {
+margin-left: -50px;
+}
